test_archive/viirtuoz-vps-dev-rewrite-back-2/kubernetes_example/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kvm
  labels:
    name: kvm
