test_archive/viirtuoz-vps-dev-rewrite-back-2/kubernetes_example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubevirt-api-manager
  namespace: kvm
  labels:
    app: kubevirt-api-manager
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30180
  selector:
    app: kubevirt-api-manager
